commit 8/6/2015 tela de login e admin iniciais. template inicial

--- a/gdg-pge/WebContent/VAADIN/themes/gdg_pge/styles.scss
+++ b/gdg-pge/WebContent/VAADIN/themes/gdg_pge/styles.scss
@@ -7,3 +7,9 @@
   @include addons;
   @include gdg_pge;
 }
+
+.v-Notification.mystyle {
+    background: red;
+    border: 10px solid #C00000;
+    color: black;
+}
