--- a/gdg-pge/WebContent/VAADIN/themes/gdg_pge/layouts/content.html
+++ b/gdg-pge/WebContent/VAADIN/themes/gdg_pge/layouts/content.html
@@ -6,19 +6,17 @@
 	height: 140px;
 }
 
-#nav {
-	line-height: 30px;
-	background-color: #eeeeee;
-	height: 300px;
-	width: 60%;
-	float: left;
-	padding: 5px;
+#section1 {
+	width: 100%;
+	padding: 10px;
+	min-height: 50px;
+	text-align: center;
 }
 
-#section {
-	width: 350px;
-	float: left;
+#section2 {
+	width: 100%;
 	padding: 10px;
+	min-height: 300px;
 }
 
 #footer {
@@ -34,8 +32,7 @@
 	<img src="logo_instituicao.png"></img> <img src="topo.png"></img>
 </div>
 
-<div id="nav"></div>
+<div id="section1" location="menu"></div><br/>
+<div id="section2" location="content"></div>
 
-<div id="section" location="login"></div>
-
-<div id="footer">Departamento de Informatica - PGE - 2015</div>
+<div id="footer">Departamento de Informatica - PGE - 2015</div><!DOCTYPE html>
